--- a/index.html
+++ b/index.html
@@ -16,32 +16,23 @@
       <div class="bars" id="bars_container"></div>
 
       <div class="buttons">
-        <!-- Slider -->
-        <!-- <input
-          type="range"      
-          id="slider"
-          min="10"
-          max="50"
-          step="2"
-          value="25"
-        /> -->
 
         <!-- Drop-down list -->
         <select id="speed">
           <option disabled="disabled" selected="selected">Speed</option>
-          <option value="100">Slow</option>
-          <option value="50">Medium</option>
+          <option value="500">Slow</option>
+          <option value="100">Medium</option>
           <option value="10">Fast</option>
         </select>
 
         <select id="algorithms">
           <option disabled="disabled" selected="selected">Choose Algorithm</option>
+          <option value="selection">Selection Sort</option>
           <option value="bubble">Bubble Sort</option>
           <option value="insertion">Insertion Sort</option>
-          <option value="selection">Selection Sort</option>
-          <option value="merge">Merge Sort</option>
           <option value="quick">Quick Sort</option>
-          <option value="heap">Heap Sort</option>
+          <option value="merge">Merge Sort</option>
+          <!-- <option value="heap">Heap Sort</option> -->
         </select>
 
         <button id="randomize_array_btn">Randomize Array</button>
